--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <link rel="icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ND Parang Inc.</title>
+  <meta name="author" content="jrdemadara.dev">
+  <title>Notre Dame of Cotabato</title>
 </head>
 
 <body>
